fix  tabContainer layout issue

--- a/client/src/components/tabContainer/tabContainer.module.scss
+++ b/client/src/components/tabContainer/tabContainer.module.scss
@@ -26,6 +26,7 @@
 .tabHeaderTabs {
   display: flex;
   min-width: 0;
+  flex: 1;
 }
 
 .tabHeaderActions {
@@ -34,6 +35,7 @@
   justify-content: flex-end;
   align-items: center;
   padding: $spacing-03 $spacing-05;
+  flex: 1;
 }
 
 .tabButton {
